--- a/app/Views/header.twig
+++ b/app/Views/header.twig
@@ -8,7 +8,7 @@
     </script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/css/pico.fluid.classless.min.css">
+    <link rel="stylesheet" href="/css/pico.classless.css">
 
     <title>🇱🇻Hello, world! </title>
 </head>
